fixed overflow

--- a/src/style.css
+++ b/src/style.css
@@ -17,11 +17,21 @@
   }
 }
 
-/* Базові стилі для тіла */
+html {
+  font-size: clamp(14px, 2vw, 22px); 
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Segoe UI', sans-serif;
   line-height: 1.6;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  background: linear-gradient(to right, #b3d9ff, #a2f0c1); 
+  font-size: 1rem; 
 }
+
 
 .top {
   min-height: 100vh;
@@ -43,7 +53,7 @@ body {
 }
 
 .animal {
-  overflow:auto;
+  overflow:hidden;
 }
 
 .button-bottom {
@@ -82,7 +92,7 @@ body {
     max-width: 200%;
     height: auto;
     padding : 50px 0;
-    transform: scale(1.2);
+   
   }
 }
 
@@ -91,7 +101,6 @@ body {
   max-width: 100%;
   height: auto;
   height: auto;
-  transition: transform 0.5s ease;
 }
 
 
